# gymapp

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API_DESIGN.md  ARCHITECTURE.md  CLAUDE.md  DATABASE.md  DECISIONS.md  DEPLOYMENT.md  Dockerfile  HISTORY.md  Procfile  README.md  ROADMAP.md  docker-compose.yml  manage.py  package.json  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  start.sh  tailwind.config.js  wifi.sh
.claude/: AGENTS.md  CHECKPOINTS.md  feature_list.json  init.sh
.claude/agents/: implementer.md  leader.md  migration-writer.md  reviewer.md  test-writer.md
.github/workflows/: ci.yml
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
docs/: conventions.md  domain_glossary.md  service_layer.md
gymapp/apps/core/: apps.py  (+3 more)
gymapp/services/: __init__.py  units.py
seeds/: exercises.yaml
static/: manifest.json  tailwind.css
static/src/: tailwind.css
templates/: base.html
templates/auth/: login.html  password_change.html  password_change_done.html
templates/dashboard/: home.html  progress.html
templates/feedback/: admin_list.html
templates/injuries/: form.html  list.html
templates/metrics/: create.html  edit.html  goals.html  list.html  profile.html  recovery.html
templates/nutrition/: home.html  preferences.html  supplements.html
templates/partials/: _feedback_button.html  _nav.html
templates/prs/: create.html  detail.html  edit.html  list.html
templates/routines/: block.html  create.html  detail.html  edit.html  list.html  weekly_split.html
templates/users/: onboarding.html
tests/: conftest.py  factories.py  test_smoke.py
(+144 files in other folders)
